# rtt-franka-hardware-integration

./: .gitignore  CMakeLists.txt  README.md
include/: control_modes.h  kinematic_chain.h  rtt-franka-robot.hpp
ops/: Franka_test.ops  Franka_test2.ops  franka.ops  franka_pos.ops  franka_sim.ops  franka_test.ops  franka_vel.ops
src/: kinematic_chain.cpp  rtt-franka-robot.cpp  rtt-franka-robot_hooks.cpp
test/: setup-franka-env.sh
test/robot_data_test/: CMakeLists.txt
test/robot_data_test/src/: CMakeLists.txt  QuinticPolynomial.hpp  robot_data_test-component.cpp  robot_data_test-component.hpp
